# DarkMAGIC

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  run.py  versions.json
.github/workflows/: develop_docs.yml  release_docs.yml  run_tests.yaml
DARK/: __init__.py  constants.py  core.py  io.py  material.py  model.py  numerics.py  parallel.py  rate.py  v_integrals.py  velocity_g.py
DARK/materials/: VBTS_Magnon.py  YIG_Magnon.py
DARK/models/: anapole.py  magnetic_dipole.py
DarkMAGIC/: __init__.py  constants.py  io.py  material.py  model.py  numerics.py  rate.py  v_integrals.py
DarkMAGIC/materials/: VBTS_Magnon.py  YIG_Magnon.py
DarkMAGIC/models/: magnetic_dipole.py
darkmagic/: __init__.py  analysis.py  calculator.py  constants.py  io.py  material.py  maxwell_boltzmann.py  model.py  numerics.py  parallel.py  rate.py  v_integrals.py
darkmagic/benchmark_models/: __init__.py  anapole.py  hadrophilic_scalar_mediator.py  magnetic_dipole.py  utils.py
darkmagic/materials/: VBTS_Magnon.py  YIG_Magnon.py
darkmagic/models/: anapole.py  light_scalar_mediator.py  magnetic_dipole.py
data/: VBTS.vasp  YIG.vasp  fcc_He_phonopy.yaml  hcp_He_phonopy.yaml
develop/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
develop/examples/: index.html
develop/formalism/: index.html
develop/reference/SUMMARY/: index.html
develop/reference/darkmagic/: index.html
develop/reference/darkmagic/analysis/: index.html
develop/reference/darkmagic/benchmark_models/: index.html
develop/reference/darkmagic/calculator/: index.html
develop/reference/darkmagic/constants/: index.html
develop/reference/darkmagic/io/: index.html
develop/reference/darkmagic/material/: index.html
develop/reference/darkmagic/materials/: index.html
develop/reference/darkmagic/model/: index.html
develop/reference/darkmagic/models/: index.html
develop/reference/darkmagic/numerics/: index.html
develop/reference/darkmagic/parallel/: index.html
develop/reference/darkmagic/rate/: index.html
develop/reference/darkmagic/v_integrals/: index.html
develop/reference/docs/gen_ref_pages/: index.html
develop/reference/tests/test_material/: index.html
develop/search/: search_index.json
docs/: examples.md  formalism.md  gen_ref_pages.py  index.md
tests/: test_material.py  test_model.py
tests/data/: hcp_He_1GPa.phonopy.yaml
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.1/formalism/: index.html
v0.0.1/reference/SUMMARY/: index.html
v0.0.1/reference/darkmagic/: index.html
v0.0.1/reference/darkmagic/analysis/: index.html
v0.0.1/reference/darkmagic/benchmark_models/: index.html
v0.0.1/reference/darkmagic/constants/: index.html
v0.0.1/reference/darkmagic/io/: index.html
v0.0.1/reference/darkmagic/material/: index.html
v0.0.1/reference/darkmagic/materials/: index.html
v0.0.1/search/: search_index.json
v0.0.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.2/examples/: index.html
v0.0.2/formalism/: index.html
v0.0.2/reference/SUMMARY/: index.html
v0.0.2/reference/darkmagic/: index.html
v0.0.2/reference/darkmagic/io/: index.html
v0.0.2/search/: search_index.json
v0.0.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.3/examples/: index.html
v0.0.3/formalism/: index.html
v0.0.3/reference/SUMMARY/: index.html
v0.0.3/reference/darkmagic/: index.html
v0.0.3/search/: search_index.json
v0.0.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.4/examples/: index.html
v0.0.4/formalism/: index.html
v0.0.4/reference/SUMMARY/: index.html
v0.0.4/reference/darkmagic/: index.html
v0.0.4/search/: search_index.json
(+69 files in other folders)
